# possum

./: .gitignore  README.md  crates.js  help.html  rust-toolchain  search-index.js  settings.html  src-files.js
.github/workflows/: build-and-test.yml  publish-docs.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: mod.rs
cli/src/commands/model/: download.rs  metadata.rs  mod.rs  revisions.rs  search.rs
cli/tests/: integration_test.rs
lib/: .rustc_info.json  .rustdoc_fingerprint.json  Cargo.toml
lib/debug/.fingerprint/possum-9720149c92d8be54/: doc-lib-possum  doc-lib-possum.json
lib/doc/: crates.js  search-index.js  src-files.js
lib/doc/possum/: all.html  index.html
lib/doc/search.desc/possum/: possum-desc-0-.js
lib/src/: lib.rs
lib/src/model/: download.rs  metadata.rs  mod.rs  revisions.rs  search.rs
possum/: all.html  constant.DEFAULT_DOWNLOAD_DIR.html  enum.Commands.html  enum.ModelCommands.html  fn.main.html  fn.model_command.html  index.html  sidebar-items.js  struct.Args.html
possum/commands/: index.html
possum_lib/: all.html  index.html  sidebar-items.js  type.BoxError.html
possum_lib/model/: index.html
search.desc/possum/: possum-desc-0-.js
search.desc/possum_lib/: possum_lib-desc-0-.js
search.index/: 026c857842.js  0b65af79a1.js  137139041f.js  1383f891aa.js  1acf23b8ab.js  2344b71922.js  2acb745afb.js  2c9ec2291b.js  41eb5acff3.js  49aa5122e4.js  4d113b4774.js  4e3491db0c.js  517d79d02b.js  612b0fdbe8.js  6a48811c29.js  6eacaf04f9.js  71dd024caa.js  747e8c11f1.js  784f72d403.js  7b1fc59bfe.js  7d4adbf769.js  root.js
search.index/crateNames/: 46bd1aa388.js
search.index/desc/: 36cff4593f.js  c0c2c97552.js
search.index/entry/: 747ed3a3ee.js  cc1b4ff87c.js
search.index/function/: 634ee92aff.js  69057377ca.js
search.index/generic_inverted_index/: 9339da68d5.js  e800cb5310.js
search.index/name/: c24d35027d.js  cff859d0fe.js
search.index/normalizedName/: 52ff46c092.js  e036361b94.js
search.index/path/: 7620182135.js  ee5f5c12b8.js
search.index/type/: 586fa373c3.js  d12d6536e0.js
src/possum/: lib.rs.html  main.rs.html
src/possum_lib/: lib.rs.html
(+81 files in other folders)
