[package]
name = "possum-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "possum"
path = "src/main.rs"

[dependencies]
possum-lib = { path = "../lib" }
clap = { version = "4.5", features = ["derive"] }
reqwest = { version  = "0.12.8", features = ["json", "stream"] }
serde_json = "1.0.132"
tokio = { version = "1.40" , features = ["full", "macros"]}
futures = "0.3"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
glob = "0.3"
# jwalk = "0.6"
# rayon = "1.2"
# reqwest = { version = "0.11", features = ["blocking"] }
# serde_json = "1.0"
# toml = { version="0.7", default_features = true }
# tracing = "0.1"
# tracing-subscriber = "0.3"
