[package]
name = "possum-cli"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "possum"
path = "src/main.rs"

[dependencies]
possum-lib = { path = "../lib" }
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.40", features = ["full", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
serde_json = "1.0.132"
wiremock = "0.6"
tempfile = "3.0"
assert_cmd = "2.0"
