[package]
name = "possum-lib"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "stream"] }
serde_json = "1.0.132"
tokio = { version = "1.40", features = ["full", "macros"] }
futures = "0.3"
indicatif = "0.17"
tracing = "0.1"
glob = "0.3"

[dev-dependencies]
tokio-test = "0.4"
